# rzen

./: Cargo.toml  README.md  rzen.toml
.github/workflows/: release.yml
src/: cli.rs  commands.rs  config.rs  logging.rs  main.rs  tui.rs  utils.rs
src/commands/: build.rs  deploy.rs  monitor.rs
